--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "./dist/node/scratch-vm.js",
   "browser": "./src/index.js",
   "scripts": {
-    "build": "npm run docs && webpack --progress --colors --bail -p",
+    "build": "webpack --progress --colors --bail",
     "coverage": "tap ./test/{unit,integration}/*.js --coverage --coverage-report=lcov",
     "deploy": "touch playground/.nojekyll && gh-pages -t -d playground -m \"Build for $(git log --pretty=format:%H -n1)\"",
     "docs": "jsdoc -c .jsdoc.json",
@@ -34,13 +34,13 @@
     "atob": "2.1.2",
     "btoa": "1.2.1",
     "canvas-toBlob": "1.0.0",
+    "crypto-js": "^4.0.0",
     "decode-html": "2.0.0",
     "diff-match-patch": "1.0.4",
     "format-message": "6.2.1",
     "htmlparser2": "3.10.0",
     "immutable": "3.8.1",
     "jszip": "^3.1.5",
-    "crypto-js": "^4.0.0",
     "minilog": "3.1.0",
     "nets": "3.2.0",
     "scratch-parser": "5.0.0",
@@ -72,7 +72,7 @@
     "scratch-audio": "latest",
     "scratch-blocks": "latest",
     "scratch-l10n": "^3.1.20181129221712",
-    "scratch-render": "latest",
+    "scratch-render": "0.1.0-prerelease.20190926151247",
     "scratch-storage": "^1.1.0",
     "scratch-svg-renderer": "latest",
     "script-loader": "0.7.2",
